<resources>
    <string name="app_name">MCK APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string-array name="kontrak">
        <item>No. 345678788    </item>
        <item>No. 12345678    </item>
        <item>No. 87654321    </item>
    </string-array>

    <string-array name="kontrak2">
        <item>    345678788    </item>
        <item>    12345678    </item>
    </string-array>


    <string name="token">AAAA8qcyaL8:APA91bGY5ZPPEnl8we3OywEEWiOzuD4PetI0QeZ63vTAlmltItlECCG5Iah-MaigS8XH88UhT5cbPKjNuVQHg7BuOFr5Sd8frBNHiec1fsalqERdDx7WlUr3_x4mWc_Uxl9raQpzGgAh</string>
    <string name="icon_vip">icon vip</string>
    <string name="dummy_uname">HALO, !</string>
    <string name="dummy_kontrak">No. 2334559958</string>
    <string name="icon_wallet">icon wallet</string>
    <string name="tagihan">Tagihan</string>
    <string name="dummy_tagihan">Rp. 300.000</string>
    <string name="icon_date">icon date</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
    <string name="dummy_date">23 Maret 2021</string>
    <string name="tenor">Tenor</string>
    <string name="dummy_tenor">2/6 Bulan</string>
    <string name="icon_denda">icon denda</string>
    <string name="denda">Denda</string>
    <string name="dummy_denda">Rp. 30.000</string>
    <string name="general">GENERAL</string>
</resources>